# vizier-trading-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: vizier-research-envoy.md
config/: risk_profile.yaml
memory/: EXAMPLE_decision_log.jsonl  README.md
memory/theses/: EXAMPLE_thesis.yaml
references/: anchor-example.md  autonomy-and-safety.md  execution-mechanics.md  output-template.md  pipeline.md
tests/: conftest.py  test_autonomy.py  test_cli.py  test_config.py  test_data_sufficiency.py  test_memory.py  test_reconcile.py  test_risk.py  test_scorecard.py
vizier/: __init__.py  __main__.py  autonomy.py  cli.py  constants.py  data_sufficiency.py  memory.py  reconcile.py  risk.py  scorecard.py
